--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #E0E2DB;
+  background-color: #EEEFE6;
 }
 header {
 	height: 140px;
-	background-color: #4D7750;
+	background-color: #39462D;
 }
 .wrapper {
 	width: 700px;
@@ -25,7 +25,7 @@ footer {
 /* ------ header ------ */
 header h1 {
 	font-family: American typewriter;
-	color: #B1B7BF;
+	color: #EEEFE6;
 	margin: 0px;
 	padding-top: 20px;
 	font-size: 40px;
@@ -33,7 +33,7 @@ header h1 {
 }
 header h2 {
 	font-family: American typewriter;
-	color: #B1B7BF;
+	color: #EEEFE6;
 	margin: 0px;
 	padding-top: 0px;
   padding-bottom: 20px;
@@ -44,7 +44,7 @@ header h2 {
 /* ------ body ------ */
 h3 {
   font-family: American typewriter;
-	color: #4D7750;
+	color: #39462D;
 	margin: 0px;
 	padding-top: 0px;
 	font-size: 24px;
@@ -60,10 +60,11 @@ p, ul, ol {
 }
 
 /* ------ links ------ */
-a:link { color: #4D7750; }
-a:visited { color: 92AC7C; }
-a:hover { color: #4D7750; }
-a:active { color: 92AC7C; }
+a:link { color: #39462D; 
+font-weight: bold; }
+a:visited { color: #606c38; }
+a:hover { color: #39462D; }
+a:active { color: #606c38; }
 
 
 /* ------ image & div references----- */
@@ -72,18 +73,19 @@ img {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 10%;
 }
 .small {
   height: 5px;
   width: auto;
 }
 hr {
-  border: 2px solid #F8E586;
+  border: 4px solid #F8E586;
 }
 
 
 /* ------ footer ------ */
 footer h3 {
   padding-top: 30px;
-	color: #4D7750;	
+	color: #EEEFE6;	
 }
